examples/test/testpolicy7951.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7951
  namespace: namespace447
spec:
  podSelector:
    matchLabels:
      key12: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value1
      podSelector:
        matchLabels:
          key36: value26
          key35: value8
          key34: value6
